fix mobile padding on small screen below 350px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,6 +368,7 @@ footer {
   }
 
   .computer-area {
+    margin-top: 1rem;
     margin-bottom: 1rem;
   }
 }
